# Agents-

./: .gitignore  .npmignore  .npmrc  AGENTS.md  ANALYSIS.md  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  DEVICE-SETUP.md  Dockerfile  MCP_COVERAGE.md  PR_PROPOSAL_EN.md  Prompt_Engineering_Techniques.ipynb  README.md  RESEARCH.md  SECURITY.md  SWARM_BRIEF.md  VERIFICATION.md  ad_copy.html  analytics_setup.md  email_sequence.md  fix-issue-2015.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  social_media.md  strategy.md  t . -- --template react  webpack.config.js
.agents/: config.toml
.claude/: memory.md  statusline-command.sh
.claude-plugin/: README.md  marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.omc/: project-memory.json
Descargas_PDF/: Resumen_Normativas_HospitalMaterno_ElSalvador.xlsx
aperture/: .gitignore  Cargo.toml  NOTICE.md  README.md
aperture-ui/: .gitignore  README.md  index.html  package.json  vite.config.ts
aperture/crates/aperture-core/: Cargo.toml
aperture/crates/aperture-core/src/: ast.rs  grammar.rs  lib.rs  state.rs
aperture/crates/aperture-core/tests/: grammar.rs
aperture/crates/aperture-data/: Cargo.toml
aperture/crates/aperture-data/src/: lib.rs  memory.rs  stub.rs
aperture/crates/aperture-data/tests/: memory_provider.rs  wide_methods.rs  wide_methods_v3.rs
aperture/crates/aperture-providers-claude/: Cargo.toml  README.md
aperture/crates/aperture-providers-claude/src/: cache.rs  config.rs  exec.rs  lib.rs  prompts.rs  researcher.rs
aperture/crates/aperture-providers-claude/tests/: fallback.rs
aperture/crates/aperture-providers-managed-agents/: Cargo.toml  README.md
aperture/crates/aperture-providers-managed-agents/src/: api.rs  config.rs  lib.rs  researcher.rs  sse.rs
aperture/crates/aperture-providers-managed-agents/tests/: fallback.rs  live.rs
aperture/crates/aperture-render/: Cargo.toml
aperture/crates/aperture-render/src/: lib.rs
aperture/crates/aperture-swarm/: Cargo.toml
aperture/crates/aperture-swarm/src/: envelope.rs  native_stdio.rs  wasm_postmsg.rs
aperture/crates/aperture-tui/: Cargo.toml
aperture/crates/aperture-tui/src/: app.rs  keymap_native.rs  main.rs
aperture/crates/aperture-tui/src/agent_runner/: data.rs  mod.rs
aperture/crates/aperture-tui/src/agent_runner/panes/: chart.rs  corpact.rs  corr.rs  crypto.rs  earnings.rs  filings.rs  financials.rs  fx.rs  insider.rs  ivol.rs  macro_pane.rs  members.rs  mod.rs  movers.rs  news.rs  options.rs  oracle.rs  order.rs  quote.rs  risk.rs  screen.rs  sentiment.rs  tech.rs  yields.rs
aperture/crates/aperture-tui/tests/: roundtrip_stdio.rs  roundtrip_stdio_wide.rs
bench-witness/: ledger.json  rag-cached-router-2026-05-18T01-46-02-728Z.json  rag-cli-cosign-capability-2026-05-18T02-27-48-529Z.json  rag-cli-verify-capability-2026-05-18T02-15-30-179Z.json  rag-lazy-router-2026-05-18T01-21-38-605Z.json  rag-multisig-attestation-2026-05-18T02-05-28-744Z.json  rag-regression-check-2026-05-18T01-45-00-958Z.json  rag-regression-check-2026-05-18T01-46-23-404Z.json  rag-trend-visualization-2026-05-18T01-54-42-735Z.json
benchmarks/: run-sota-matrix.mjs
data/: clone-data.ledger.json  clone-data.proof.json  clone-data.rvf
docs/: STATUS.md  USERGUIDE.md  contrato-ramon-ajuste-estatus.txt  index.md
evals/: smoke.test.ts
landing/: next.config.mjs  package.json  tailwind.config.ts
normativas/: SISTEMA.md  config.yaml  orchestrate.sh  progreso_validacion.txt  resultados_validacion.json  urls_informe.json  validate_urls.py
research-roadmap/: 00-SYNTHESIS.md  01-upstream-pulse.md  02-competitive-landscape.md  03-internal-debt.md  04-perf-frontier.md  05-adoption.md  GAP-1-DESIGN.md  GAP-4-DESIGN.md
restaurant/: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
ruflo/: README.md  package-lock.json  package.json
ruflo2/: .gitignore  AGENTS.md  CLAUDE.md  agentdb.rvf  test-database-provider.rvf  test-gemini.js  tests_report.json
scripts/: audit-cli-mcp-tools.mjs  audit-env-var-precedence.mjs  audit-supply-chain.mjs  auto-retrain-router.mjs  benchmark-graph.mjs  benchmark-models.mjs  benchmark-rag-cli-cosign.mjs  benchmark-rag-cli-verify.mjs  benchmark-rag-lazy-router.mjs  benchmark-rag-multisig-attestation.mjs  benchmark-rag-topology-suite.mjs  benchmark-seed-corpus.mjs  build-benchmark-ledger.mjs  calibration-check.mjs  check-benchmark-regression.mjs  darwin-ab-benchmark.mjs  dev-install.sh  gen-seed-corpus-v2.mjs  install.sh  smoke-agent-benchmark-suite.mjs  smoke-all-plugins.mjs  smoke-cli-benchmark-cosign.mjs  smoke-cli-benchmark-verify.mjs  smoke-cli-memory-search-unified-custom-ns.mjs  smoke-cli-search-text-diverse.mjs  smoke-cli-search-text-hyde.mjs  smoke-graph-schema-migration.mjs  smoke-hive-consensus-engine.mjs  smoke-ruflo-hook-cjs.mjs  smoke-trajectory-graph-edges.mjs  smoke-windows-hook-execution.mjs  smoke-witness-verify-precondition.mjs  train-bundled-fastgrnn.mjs  train-bundled-krr.mjs  train-calibrator.mjs  visualize-benchmark-trends.mjs
src/: App.tsx  index.css
tests/: test-orchestrator-status.js
tickra/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  tsconfig.json  vercel.json
v2/: package-lock.json
v3/: .npmrc  README.md  package-lock.json  package.json  pnpm-lock.yaml  (+1 more)
(+1302 files in other folders)
