[package]
name = "aperture-providers-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Web-research DataSource backed by `claude -p` headless invocations"

[dependencies]
aperture-data = { path = "../aperture-data" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
# Process spawning + I/O for `claude -p` invocations. The `process` feature
# is local to this crate so the workspace `tokio` profile stays minimal.
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util", "time", "sync"] }
