[package]
name = "aperture-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Backend-agnostic Pane and Widget traits for Aperture"

[dependencies]
aperture-core = { path = "../aperture-core" }
serde = { workspace = true }
serde_json = { workspace = true }
